updated mahimas email

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                     <h3>Mahima P Nair</h3>
                     <p><strong>Media Team</strong></p>
                     <p>Third year Computer Science & Engineering Student</p>
-                    <p>📧 need to update</p>
+                    <p>📧 mahimapnair@gmail.com</p>
                 </div>
 
 
