--- a/index.html
+++ b/index.html
@@ -467,11 +467,18 @@
             <h2 class="section-title">Newsletters</h2>
             <div class="grid">
                 <div class="card">
-                    <h3>Title</h3>
+                    <h3>🚀 NISAR: Space Power Unites NASA and ISRO!</h3>
                     <div class="newsletter-item">
                         <h4>Title1</h4>
                         <div class="newsletter-date">Date</div>
-                        <p>NASA announces new timeline for lunar landing missions and crew selection process.</p>
+                        <p>Mark your calendars! On July 30 at 5:40 PM, India's and the US' first-ever joint satellite, NISAR, will be launched from Sriharikota on the GSLV-F16 rocket! 🇮🇳🇺🇸
+
+🔭 What is NISAR?
+A revolutionary Earth observation satellite aimed to monitor even the smallest variations on Earth's surface – such as ground displacement, vegetation, and soil water content – with dual-frequency Synthetic Aperture Radar.
+
+ NISAR will image the planet every 12 days, day and night, in all weather, with precise information. It will be instrumental in disaster relief, storm monitoring, soil and water resource monitoring, coast mapping, and much more. This high-power satellite will enable scientists to better know how our home planet is evolving.
+
+🤝 10+ years of collaboration between ISRO and NASA have led to this mission. Let's celebrate this launch in history! ✨</p>
                     </div>
                     <div class="newsletter-item">
                         <h4>Club Achievements</h4>
