--- a/index.html
+++ b/index.html
@@ -473,9 +473,9 @@
                     </div>
                     <div class="newsletter-item">
                         <h4>🔭 What is NISAR?</h4>
-                        <p>A revolutionary Earth observation satellite aimed to monitor even the smallest variations on Earth's surface – such as ground displacement, vegetation, and soil water content – with dual-frequency Synthetic Aperture Radar.
+                        <p>A revolutionary Earth observation satellite aimed to monitor even the smallest variations on Earth's surface – such as ground displacement, vegetation, and soil water content – with dual-frequency Synthetic Aperture Radar.<br>
 
- NISAR will image the planet every 12 days, day and night, in all weather, with precise information. It will be instrumental in disaster relief, storm monitoring, soil and water resource monitoring, coast mapping, and much more. This high-power satellite will enable scientists to better know how our home planet is evolving.
+ NISAR will image the planet every 12 days, day and night, in all weather, with precise information. It will be instrumental in disaster relief, storm monitoring, soil and water resource monitoring, coast mapping, and much more. This high-power satellite will enable scientists to better know how our home planet is evolving.<br>
 
 🤝 10+ years of collaboration between ISRO and NASA have led to this mission. Let's celebrate this launch in history! ✨</p>
                     </div>
