updated news letter

--- a/index.html
+++ b/index.html
@@ -481,11 +481,18 @@
                     </div>
                 </div>
                 <div class="card">
-                    <h3>📰 November 2024 Edition</h3>
+                    <h3>🚀 "Welcome Back, Shubhanshu Shukla!" 🌍</h3>
                     <div class="newsletter-item">
-                        <h4>Mars Sample Return Mission</h4>
-                        <div class="newsletter-date">November 15, 2024</div>
-                        <p>ESA and NASA collaboration brings us closer to returning Martian samples to Earth.</p>
+                        <p>History has been written yet again — Group Captain Shubhanshu Shukla (Shux) has returned to Earth safely following the successful execution of the Axiom-4 (Ax-4) mission. 🌌<br>
+
+ From intense training to orbital experiments aboard the International Space Station (ISS), his journey marks a monumental stride in India’s human spaceflight ambitions — a legacy that follows the footsteps of legends like Rakesh Sharma.🇮🇳✨<br>
+
+With a serene splashdown in the Pacific Ocean, Shux not only ended his mission but also sparked dreams for generations to come. His words while orbiting space continue to reverberate:<br>
+
+> "As this journey completes… India's human spaceflight journey is both long and challenging."<br>
+
+
+🇮🇳 From the proud soil of Uttar Pradesh to the vastness of space, Shubhanshu Shukla’s return is more than a moment — it’s a milestone.</p>
                     </div>
                     <div class="newsletter-item">
                         <h4>Member Spotlight</h4>
