updated news letter

--- a/index.html
+++ b/index.html
@@ -489,15 +489,10 @@
 
 With a serene splashdown in the Pacific Ocean, Shux not only ended his mission but also sparked dreams for generations to come. His words while orbiting space continue to reverberate:<br>
 
-> "<i>As this journey completes… India's human spaceflight journey is both long and challenging.</i>"<br>
+"<i>As this journey completes… India's human spaceflight journey is both long and challenging.</i>"<br>
 
 
-🇮🇳 From the proud soil of Uttar Pradesh to the vastness of space, Shubhanshu Shukla’s return is more than a moment — it’s a milestone.</p>
-                    </div>
-                    <div class="newsletter-item">
-                        <h4>Member Spotlight</h4>
-                        <div class="newsletter-date">November 15, 2024</div>
-                        <p>Interview with senior member who secured internship at SpaceX.</p>
+From the proud soil of Uttar Pradesh to the vastness of space, Shubhanshu Shukla’s return is more than a moment — it’s a milestone.</p>
                     </div>
                 </div>
                 <div class="card">
