updated news letter

--- a/index.html
+++ b/index.html
@@ -496,16 +496,21 @@ From the proud soil of Uttar Pradesh to the vastness of space, Shubhanshu Shukla
                     </div>
                 </div>
                 <div class="card">
-                    <h3>📰 October 2024 Edition</h3>
+                    <h3>🚀 India’s Giant Leap! 2nd Indian Sent to Space After 41 Years</h3>
                     <div class="newsletter-item">
-                        <h4>Europa Clipper Launch</h4>
-                        <div class="newsletter-date">October 20, 2024</div>
-                        <p>Successful launch of NASA's mission to Jupiter's icy moon Europa.</p>
-                    </div>
-                    <div class="newsletter-item">
-                        <h4>Photography Contest Results</h4>
-                        <div class="newsletter-date">October 20, 2024</div>
-                        <p>Amazing astrophotography submissions from our talented members.</p>
+                        <p>In June 2025, Group Captain Shubhanshu Shukla became the 2nd Indian in space, after Rakesh Sharma’s 1984 historic flight.<br>
+
+🧑‍🚀 Part of Ax-4 mission, his spaceflight marks India’s return to human space exploration — with big plans ahead.<br>
+
+🚀 Gaganyaan will soon send 3 Indian astronauts to 400 km low Earth orbit, using the trusted LVM3 rocket.<br>
+
+🏫 Astronauts to be trained at ISRO’s Bengaluru facility, shifting from foreign to fully Indian preparation.<br>
+
+🔭 India is also targeting an Indian Space Station by 2035, followed by crewed Moon missions in the 2040s.<br>
+
+🇮🇳 From one space hero to many — India is now building its own path to the stars!<br>
+
+#IndiaInSpace #Gaganyaan #ISRO #ShubhanshuShukla #IndianAstronaut #SpaceFuture #ProudMoment #IndianSpaceProgram</p>
                     </div>
                 </div>
             </div>
