--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="stars" id="stars"></div>
 
     <header>
-        <nav>
+        <nav class="navbar bg-dark" data-bs-theme="dark">
             <div class="logo">
                 <img src="images/logo.png" alt="Space Club LBSITW Logo" style="height:50px;">
             </div>
@@ -481,7 +481,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <h3>🚀 "Welcome Back, Shubhanshu Shukla!" 🌍</h3>
+                    <h3>🚀 "Welcome Back, Shubhanshu Shukla!" </h3>
                     <div class="newsletter-item">
                         <p>History has been written yet again — Group Captain Shubhanshu Shukla (Shux) has returned to Earth safely following the successful execution of the Axiom-4 (Ax-4) mission. 🌌<br>
 
