--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="stars" id="stars"></div>
 
     <header>
-        <nav class="navbar bg-dark" data-bs-theme="dark">
+        <nav class="navbar">
             <div class="logo">
                 <img src="images/logo.png" alt="Space Club LBSITW Logo" style="height:50px;">
             </div>
