updated news letter

--- a/index.html
+++ b/index.html
@@ -514,6 +514,55 @@ From the proud soil of Uttar Pradesh to the vastness of space, Shubhanshu Shukla
                     </div>
                 </div>
             </div>
+            <div class="grid">
+                <div class="card">
+                    <h3>🚀 NISAR: Space Power Unites NASA and ISRO!</h3>
+                    <div class="newsletter-item">
+                        <p>Mark your calendars! On July 30 at 5:40 PM, India's and the US' first-ever joint satellite, NISAR, will be launched from Sriharikota on the GSLV-F16 rocket! 🇮🇳🇺🇸</p>
+                    </div>
+                    <div class="newsletter-item">
+                        <h4>🔭 What is NISAR?</h4>
+                        <p>A revolutionary Earth observation satellite aimed to monitor even the smallest variations on Earth's surface – such as ground displacement, vegetation, and soil water content – with dual-frequency Synthetic Aperture Radar.<br>
+
+ NISAR will image the planet every 12 days, day and night, in all weather, with precise information. It will be instrumental in disaster relief, storm monitoring, soil and water resource monitoring, coast mapping, and much more. This high-power satellite will enable scientists to better know how our home planet is evolving.<br>
+
+🤝 10+ years of collaboration between ISRO and NASA have led to this mission. Let's celebrate this launch in history! ✨</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3>🚀 "Welcome Back, Shubhanshu Shukla!" </h3>
+                    <div class="newsletter-item">
+                        <p>History has been written yet again — Group Captain Shubhanshu Shukla (Shux) has returned to Earth safely following the successful execution of the Axiom-4 (Ax-4) mission. 🌌<br>
+
+ From intense training to orbital experiments aboard the International Space Station (ISS), his journey marks a monumental stride in India’s human spaceflight ambitions — a legacy that follows the footsteps of legends like Rakesh Sharma.🇮🇳✨<br>
+
+With a serene splashdown in the Pacific Ocean, Shux not only ended his mission but also sparked dreams for generations to come. His words while orbiting space continue to reverberate:<br>
+
+"<i>As this journey completes… India's human spaceflight journey is both long and challenging.</i>"<br>
+
+
+From the proud soil of Uttar Pradesh to the vastness of space, Shubhanshu Shukla’s return is more than a moment — it’s a milestone.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3>🚀 India’s Giant Leap! 2nd Indian Sent to Space After 41 Years</h3>
+                    <div class="newsletter-item">
+                        <p>In June 2025, Group Captain Shubhanshu Shukla became the 2nd Indian in space, after Rakesh Sharma’s 1984 historic flight.<br>
+
+🧑‍🚀 Part of Ax-4 mission, his spaceflight marks India’s return to human space exploration — with big plans ahead.<br>
+
+🚀 Gaganyaan will soon send 3 Indian astronauts to 400 km low Earth orbit, using the trusted LVM3 rocket.<br>
+
+🏫 Astronauts to be trained at ISRO’s Bengaluru facility, shifting from foreign to fully Indian preparation.<br>
+
+🔭 India is also targeting an Indian Space Station by 2035, followed by crewed Moon missions in the 2040s.<br>
+
+🇮🇳 From one space hero to many — India is now building its own path to the stars!<br>
+
+#IndiaInSpace #Gaganyaan #ISRO #ShubhanshuShukla #IndianAstronaut #SpaceFuture #ProudMoment #IndianSpaceProgram</p>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- About Section -->
