updated news letter

--- a/index.html
+++ b/index.html
@@ -516,17 +516,19 @@ From the proud soil of Uttar Pradesh to the vastness of space, Shubhanshu Shukla
             </div>
             <div class="grid">
                 <div class="card">
-                    <h3>🚀 NISAR: Space Power Unites NASA and ISRO!</h3>
+                    <h3>🚀 India’s Next Spy in the Sky! ISRO to Launch RISAT-1B for Border Surveillance</h3>
                     <div class="newsletter-item">
-                        <p>Mark your calendars! On July 30 at 5:40 PM, India's and the US' first-ever joint satellite, NISAR, will be launched from Sriharikota on the GSLV-F16 rocket! 🇮🇳🇺🇸</p>
-                    </div>
-                    <div class="newsletter-item">
-                        <h4>🔭 What is NISAR?</h4>
-                        <p>A revolutionary Earth observation satellite aimed to monitor even the smallest variations on Earth's surface – such as ground displacement, vegetation, and soil water content – with dual-frequency Synthetic Aperture Radar.<br>
+                        <p> On May 18, ISRO will launch <b>RISAT-1B (EOS-09)</b> from Sriharikota , strengthening India’s national security & border surveillance.<br>  
 
- NISAR will image the planet every 12 days, day and night, in all weather, with precise information. It will be instrumental in disaster relief, storm monitoring, soil and water resource monitoring, coast mapping, and much more. This high-power satellite will enable scientists to better know how our home planet is evolving.<br>
+🛰️ Radar imaging satellite weighing 1,710 kg , carried by PSLV-C61, placed in sun-synchronous orbit (529 km altitude).<br>  
 
-🤝 10+ years of collaboration between ISRO and NASA have led to this mission. Let's celebrate this launch in history! ✨</p>
+🌍 C-band Synthetic Aperture Radar (SAR) for all-weather surveillance, providing high-resolution imagery to monitor security threats.<br>  
+
+🔎  The <b>RISAT series</b> has played a vital role in India’s defense, aiding anti-terror operations & border monitoring.<br> 
+
+🔜 <i>What’s next? In June, ISRO will launch <b>NISAR (NASA-ISRO Synthetic Aperture Radar)</b> via <b>GSLV-F16</b>, a powerful tool for Earth observation!</i>
+
+India continues to fortify its defense with cutting-edge satellite tech!</p>
                     </div>
                 </div>
                 <div class="card">
