updated news letter

--- a/index.html
+++ b/index.html
@@ -532,18 +532,11 @@ India continues to fortify its defense with cutting-edge satellite tech!</p>
                     </div>
                 </div>
                 <div class="card">
-                    <h3>🚀 "Welcome Back, Shubhanshu Shukla!" </h3>
+                    <h3>🌕PINK MOON 2025🌕</h3>
                     <div class="newsletter-item">
-                        <p>History has been written yet again — Group Captain Shubhanshu Shukla (Shux) has returned to Earth safely following the successful execution of the Axiom-4 (Ax-4) mission. 🌌<br>
+                        <p>The enchanting Pink Moon will be visible in India on the morning of Sunday, April 13, 2025. While it is expected to peak around 8:22 pm EDT on Saturday, April 12, skywatchers in India can catch a glimpse of it around 5:00 am IST on Sunday. You don't need any special equipment, just step out onto your balcony, rooftop or even catch it from your window to witness this celestial beauty.🌝
 
- From intense training to orbital experiments aboard the International Space Station (ISS), his journey marks a monumental stride in India’s human spaceflight ambitions — a legacy that follows the footsteps of legends like Rakesh Sharma.🇮🇳✨<br>
-
-With a serene splashdown in the Pacific Ocean, Shux not only ended his mission but also sparked dreams for generations to come. His words while orbiting space continue to reverberate:<br>
-
-"<i>As this journey completes… India's human spaceflight journey is both long and challenging.</i>"<br>
-
-
-From the proud soil of Uttar Pradesh to the vastness of space, Shubhanshu Shukla’s return is more than a moment — it’s a milestone.</p>
+#MOON #Space #PinkMoon #PinkMoon2025 #India #moon</p>
                     </div>
                 </div>
                 <div class="card">
