updated nes letter

--- a/index.html
+++ b/index.html
@@ -540,21 +540,15 @@ India continues to fortify its defense with cutting-edge satellite tech!</p>
                     </div>
                 </div>
                 <div class="card">
-                    <h3>🚀 India’s Giant Leap! 2nd Indian Sent to Space After 41 Years</h3>
+                    <h3>🚀 Sunita Williams’ Unstoppable Journey: A 300-Day Starliner Mission That Made History!</h3>
                     <div class="newsletter-item">
-                        <p>In June 2025, Group Captain Shubhanshu Shukla became the 2nd Indian in space, after Rakesh Sharma’s 1984 historic flight.<br>
+                        <p>In an unparalleled feat of space exploration, NASA astronaut Sunita Williams embarked on a mission expected to last a mere 8 days, but instead, she bravely endured an astonishing 300-day journey in the vast unknown!</p>
 
-🧑‍🚀 Part of Ax-4 mission, his spaceflight marks India’s return to human space exploration — with big plans ahead.<br>
+<p>Along with astronaut Butch Wilmore, Williams was part of a groundbreaking Boeing Starliner test flight. However, a series of unexpected technical failures, including helium leaks and thruster malfunctions, left the duo stranded on the International Space Station (ISS) for nearly 10 months.</p>
 
-🚀 Gaganyaan will soon send 3 Indian astronauts to 400 km low Earth orbit, using the trusted LVM3 rocket.<br>
+<p>After multiple delays and setbacks, the astronauts finally returned to Earth aboard a SpaceX Crew Dragon capsule on March 18, 2025. Their grueling 17-hour journey came to an end with a dramatic splashdown off the Florida coast, where a team of recovery experts greeted them with relief and admiration.</p>
 
-🏫 Astronauts to be trained at ISRO’s Bengaluru facility, shifting from foreign to fully Indian preparation.<br>
-
-🔭 India is also targeting an Indian Space Station by 2035, followed by crewed Moon missions in the 2040s.<br>
-
-🇮🇳 From one space hero to many — India is now building its own path to the stars!<br>
-
-#IndiaInSpace #Gaganyaan #ISRO #ShubhanshuShukla #IndianAstronaut #SpaceFuture #ProudMoment #IndianSpaceProgram</p>
+<p>This remarkable mission catapulted Sunita Williams to the pinnacle of space exploration,an achievement that solidifies her position as one of the most experienced and accomplished U.S. astronauts in history!</p>
                     </div>
                 </div>
             </div>
