--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="stars" id="stars"></div>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-transparent position-fixed w-100">
+        <nav>
             <div class="logo">
                 <img src="images/logo.png" alt="Space Club LBSITW Logo" style="height:50px;">
             </div>
