--- a/index.html
+++ b/index.html
@@ -68,6 +68,46 @@
             <h3 style="color: #bb86fc; margin: 3rem 0 1rem 0; font-size: 1.5rem;"> Past Events</h3>
             <div class="grid">
                 <div class="card">
+                    <div class="event-date">19 August 2025</div>
+                    <div class="event-image">
+                        <img src="images/symposium.jpg" alt="Symposium:Space Vision 2047 and Beyond">
+                    </div>
+                    <h3>Symposium:Space Vision 2047 and Beyond</h3>
+                    <p>Featuring distinguised experts from LPSC and discussion on the boundless possibilities of space exploration in 2047 and beyond.<p>
+                    <p>Time: 9.30 AM - 12.30PM
+                    <p>Venue: Civil Seminar Hall,LBSITW</p>
+                </div>
+                <div class="card">
+                    <div class="event-date">14 August 2025</div>
+                    <div class="event-image">
+                        <img src="images/cosmictales.jpg" alt="Cosmocraft 2.0">
+                    </div>
+                    <h3>Cosmocraft 2.0</h3>
+                    <p>Built the wonders of the cosmos - Model making competition .<p>
+                    <p>Time: 9.00 AM - 12.00PM
+                    
+                </div>
+                <div class="card">
+                    <div class="event-date">11 August 2025</div>
+                    <div class="event-image">
+                        <img src="images/cosmictales.jpg" alt="Cosmic Tales 2.0">
+                    </div>
+                    <h3>Cosmic Tales 2.0</h3>
+                    <p>Short story writing competition - create a cosmic story and win certificates from ISRO.<p>
+                    <p>Time: 8.00 AM
+                    <p>Venue: online</p>
+                </div>
+                <div class="card">
+                    <div class="event-date">11 August 2025</div>
+                    <div class="event-image">
+                        <img src="images/celestial.jpg" alt="Celestial Chronicles 2.0">
+                    </div>
+                    <h3>Celestial Chronicles 2.0</h3>
+                    <p>Dive into the future of space through your thoughts through this essay writing competition and win ISRO-certified certificates.<p>
+                    <p>Time: 10.00 AM - 11.00 AM
+                    <p>Venue: LITAA Seminar Hall,LBSITW</p>
+                </div>
+                <div class="card">
                     <div class="event-date">10 August 2025</div>
                     <div class="event-image">
                         <img src="images/galaxy chase 2.0.jpg" alt="Galaxy Chase 2.0">
