--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="card">
                     <div class="event-date">14 August 2025</div>
                     <div class="event-image">
-                        <img src="images/cosmictales.jpg" alt="Cosmocraft 2.0">
+                        <img src="images/cosmocraft.jpg" alt="Cosmocraft 2.0">
                     </div>
                     <h3>Cosmocraft 2.0</h3>
                     <p>Built the wonders of the cosmos - Model making competition .<p>
